# durable-execution-design-patterns

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE-BOOK  LICENSE-CODE  README.md  antora-playbook.yml  docker-entrypoint.sh  flake.nix  mise.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  cleanup-preview.yaml
book/: book.adoc
book/appendices/: a-pattern-quick-reference.adoc  b-environment-setup.adoc
book/theme/: book.css  durable-patterns-theme.yml
dagger/: README.md  dagger.json  examples.go  go.mod  main.go
dagger/src/: book.py  diagrams.py  helm_test.py  lint.py  test.py
diagrams/: _style.py  ch01-entity-participants.puml  ch01-without-de.py  ch02-code-as-state-fsm.py  ch03-durable-promise-seq.puml  ch03-durable-promise-seq.py  ch03-without-de.py  ch04-execution-singleton.py  ch05-saga.py  ch06-scatter-gather.py  ch07-pipeline.py  ch08-perpetual-execution.py  ch09-durable-observer.py  ch10-cross-boundary-nexus.py  intro-pattern-timeline.py
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/ch02-code-as-state/python/: pyproject.toml  workflow.py
examples/ch01-entity/go/: workflow.go
examples/ch01-entity/helm/: values.yaml
infrastructure/: kind-cluster.yaml
infrastructure/chaos-mesh/: README.md  values.yaml
infrastructure/temporal/: README.md  values.yaml
leanpub/manuscript/: Book.txt  README.md
manuscript-sync/: README.md  sync.py
scripts/: check-includes.py
supplemental-ui/css/: extra.css
supplemental-ui/partials/: footer-scripts.hbs  head-styles.hbs
(+78 files in other folders)
