[project]
name = "ch02-code-as-state"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
